--- a/styles/style.css
+++ b/styles/style.css
@@ -16,6 +16,10 @@ nav {
     align-items: center;
 }
 
+nav .menu-1{
+    display: none;
+}
+
 nav .logo h3 {
     color: #3A3A3A;
     font-size: 24px;
@@ -91,13 +95,13 @@ header .banner .half img {
 .main {
     width: 100%;
     margin-top: 100px;
-    color: #3A3A3A;
-    font-size: 28px;
-    font-weight: 600;
 }
 
 .main>h2 {
     text-align: center;
+    color: #3A3A3A;
+    font-size: 28px;
+    font-weight: 600;
 }
 
 .main-card {
@@ -201,7 +205,7 @@ header .banner .half img {
     color: #ffffff;
 }
 
-/* footer star */
+/* footer start */
 footer {
     width: 100%;
     background: #0A0826;
@@ -223,7 +227,8 @@ footer .footer-text p {
     font-size: 14px;
     color: #D9DBE1;
 }
-footer .footer-text .social-icon i{
+
+footer .footer-text .social-icon i {
     color: #ffffff;
     padding: 0 8px;
 }
